Camel hub: Add docker files and readme file

--- a/camel-server/src/main/resources/application.yml
+++ b/camel-server/src/main/resources/application.yml
@@ -3,6 +3,5 @@ rest-producer:
   hello-world-path: /hello
 
 soap-producer:
-  base-uri: http://idorasi.com
-  hello-world-path: /hello
+  base-uri: http://localhost:9092/ws
 
